Feat: 平均値、中央値、最小値、最大値を出力する#1

--- a/section01/section01.ipynb
+++ b/section01/section01.ipynb
@@ -123,6 +123,57 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 1-3. 平均値、中央値、最小値、最大値を出力してみよう\n",
+    "どのような利用者がいるのか全体像を把握するために、各利用者の統計値を確認する。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "平均値: 13.073641997812613\n",
+      "中央値: 7.0\n",
+      "最小値: 1\n",
+      "最大値: 184\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 平均値、中央値、最小値、最大値の出力を行なう\n",
+    "x_mean = df_info['顧客ID'].value_counts().mean()\n",
+    "x_median = df_info['顧客ID'].value_counts().median()\n",
+    "x_min = df_info['顧客ID'].value_counts().min()\n",
+    "x_max = df_info['顧客ID'].value_counts().max()\n",
+    "print('平均値:', x_mean)\n",
+    "print('中央値:', x_median)\n",
+    "print('最小値:', x_min)\n",
+    "print('最大値:', x_max)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "平均値が１３回なのに対して中央値が７回と大きく値がずれている。\n",
+    "利用者の利用回数が一様に分布していれば（利用回数が多い人も少ない人も、一様に存在すれば）平均値と中央値は概ね一致するので、利用回数の多少がまばらに分布しているなど、分布に偏りが見られると推測される。\n",
+    "実際に、最小値が１なのに対して最大値が 184, と最大値が平均値が遠い位置にあるため最小値に近い位置に利用回数が集中しており、最大値に近いところはまばらに点在しているのではないかと予想される。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
