--- a/section01/section01.ipynb
+++ b/section01/section01.ipynb
@@ -999,6 +999,69 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1-10. 条件にあった顧客を List-up する"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      顧客ID    宿泊者名  宿泊日数（流行前）  宿泊日数（流行後）\n0   110067   石田 知実      101.0       83.0\n1   110043  斉藤 あすか       65.0       88.0\n2   110069  山岸 聡太郎       82.0       68.0\n3   110166   中村 桃子       48.0       68.0\n4   110039    井上 晃       31.0       82.0\n5   109996   山本 知実       36.0       76.0\n6   110070   笹田 知実       58.0       51.0\n7   110022  宮沢 聡太郎       46.0       60.0\n8   110103  工藤 さゆり       48.0       53.0\n9   109992  佐々木 花子       38.0       61.0\n10  110128   高橋 健一       27.0       71.0\n11  110041    三宅 充       38.0       59.0\n12  110119   坂本 修平       40.0       54.0\n13  110108    三宅 充       42.0       52.0\n14  110122  中津川 知実       38.0       51.0\n15  110083  江古田 太郎       33.0       55.0\n16  110088  中津川 七夏       29.0       54.0\n17  110020   近藤 花子       27.0       53.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>顧客ID</th>\n      <th>宿泊者名</th>\n      <th>宿泊日数（流行前）</th>\n      <th>宿泊日数（流行後）</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>110067</td>\n      <td>石田 知実</td>\n      <td>101.0</td>\n      <td>83.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>110043</td>\n      <td>斉藤 あすか</td>\n      <td>65.0</td>\n      <td>88.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>110069</td>\n      <td>山岸 聡太郎</td>\n      <td>82.0</td>\n      <td>68.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>110166</td>\n      <td>中村 桃子</td>\n      <td>48.0</td>\n      <td>68.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>110039</td>\n      <td>井上 晃</td>\n      <td>31.0</td>\n      <td>82.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>109996</td>\n      <td>山本 知実</td>\n      <td>36.0</td>\n      <td>76.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>110070</td>\n      <td>笹田 知実</td>\n      <td>58.0</td>\n      <td>51.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>110022</td>\n      <td>宮沢 聡太郎</td>\n      <td>46.0</td>\n      <td>60.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>110103</td>\n      <td>工藤 さゆり</td>\n      <td>48.0</td>\n      <td>53.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>109992</td>\n      <td>佐々木 花子</td>\n      <td>38.0</td>\n      <td>61.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>110128</td>\n      <td>高橋 健一</td>\n      <td>27.0</td>\n      <td>71.0</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>110041</td>\n      <td>三宅 充</td>\n      <td>38.0</td>\n      <td>59.0</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>110119</td>\n      <td>坂本 修平</td>\n      <td>40.0</td>\n      <td>54.0</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>110108</td>\n      <td>三宅 充</td>\n      <td>42.0</td>\n      <td>52.0</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>110122</td>\n      <td>中津川 知実</td>\n      <td>38.0</td>\n      <td>51.0</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>110083</td>\n      <td>江古田 太郎</td>\n      <td>33.0</td>\n      <td>55.0</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>110088</td>\n      <td>中津川 七夏</td>\n      <td>29.0</td>\n      <td>54.0</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>110020</td>\n      <td>近藤 花子</td>\n      <td>27.0</td>\n      <td>53.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 条件にあった顧客を List-up する\n",
+    "\n",
+    "# Parameter 設定\n",
+    "num = 200\n",
+    "threshold_post = 50\n",
+    "\n",
+    "# 顧客 List を生成\n",
+    "list_id = []\n",
+    "list_name = []\n",
+    "list_data_pre = []\n",
+    "list_data_post = []\n",
+    "\n",
+    "count_pre_and_post = np.zeros((num, 2))\n",
+    "for i_rank in range(num):\n",
+    "    i = df_info['顧客ID'].value_counts().index[i_rank]\n",
+    "    count_pre_and_post[i_rank][0] = int(df_info_pre[df_info_pre['顧客ID'] == i].count()[0])\n",
+    "    count_pre_and_post[i_rank][1] = int(df_info_post[df_info_post['顧客ID'] == i].count()[0])\n",
+    "\n",
+    "for i_rank in range(num):\n",
+    "    i = df_info['顧客ID'].value_counts().index[i_rank]\n",
+    "    text = f\"{i}({i_rank})\"\n",
+    "    if count_pre_and_post[i_rank][1] > threshold_post:\n",
+    "        list_id.append(i)\n",
+    "        list_name.append(df_info['宿泊者名'][df_info['顧客ID'] == i].iloc[0])\n",
+    "        list_data_pre.append(count_pre_and_post[i_rank][0])\n",
+    "        list_data_post.append(count_pre_and_post[i_rank][1])\n",
+    "\n",
+    "# List を DataFrame 形式に変換\n",
+    "df = pd.DataFrame([list_id])\n",
+    "df = df.T\n",
+    "df.columns = ['顧客ID']\n",
+    "df['宿泊者名'] = list_name\n",
+    "df['宿泊日数（流行前）'] = list_data_pre\n",
+    "df['宿泊日数（流行後）'] = list_data_post\n",
+    "display(df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
