Doc: 類似度と機械学習との関係を知る#3

--- a/section02/section02.ipynb
+++ b/section02/section02.ipynb
@@ -152,6 +152,33 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 2-2. 類似度と機械学習との関係を知ろう\n",
+    "顧客行動Pattern の分析対象と対応機械学習の種類\n",
+    "\n",
+    "| 分析対象                                                 | 機械学習の種類             |\n",
+    "|------------------------------------------------------|---------------------|\n",
+    "| 顧客には、どのような行動Pattern があるか。<br>（どんな Pattern の大口顧客がいるか） | Clustering (教師なし学習) |\n",
+    "| ある顧客が大口顧客になり得るかどうかを予測したい。<br>（あるいは、その原因をしりたい）        | 分類（教師あり学習）          |\n",
+    "| 大口顧客の今後の動向を予測したい。                                    | 回帰（教師あり学習）          |\n",
+    "\n",
+    "上記にいたる Process として、まず\n",
+    "1. 特徴Vector の定義（数値化）\n",
+    "2. 多次元の特徴Vector を2次元に**次元削除**\n",
+    "\n",
+    "を行ない全体像がわかるように可視化する。\n",
+    "\n",
+    "こうして可視化されたいくつかの Sample を\n",
+    "- **「Clustering」** し行動Pattern を分類する。\n",
+    "- 何らかの方法で分類されたその原因を分析したり、その原因から新たな Sample がどの分類がなされるべきかを予測する目的で *「分類」* を行なう。\n",
+    "- 時系列Pattern から今後の動向の予測を **「回帰」**で行なう。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
