Feat: 予測の精度を評価する流れを理解する#3

--- a/section02/section02.ipynb
+++ b/section02/section02.ipynb
@@ -784,6 +784,76 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 2-8. 予測の精度を評価する流れを理解しよう"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "# Dataset を訓練Data と TestData に分別する\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, data_o)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [],
+   "source": [
+    "# 訓練 Data による Model を構築する\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "clf = DecisionTreeClassifier(max_depth=2)\n",
+    "clf = clf.fit(x_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.84\n",
+      "混同行列\n",
+      "[[18  1]\n",
+      " [ 3  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 予測精度評価を行なう\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Score 算出\n",
+    "score = clf.score(x_test, y_test)\n",
+    "print('Score:', score)\n",
+    "\n",
+    "# 混同行列生成\n",
+    "pred_tree = clf.predict(x_test)\n",
+    "cm = confusion_matrix(y_test, pred_tree)\n",
+    "print('混同行列')\n",
+    "print(cm)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
