Feat: 中心極限定理について知る#5

--- a/section03/section03.ipynb
+++ b/section03/section03.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -387,8 +387,60 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 3-2.中心極限定理について知ろう\n",
+    "**中心極限定理** が正しいか Source-code を実行して確かめてみる。\n",
+    "> #### 中心極限定理\n",
+    "> 母集団が\n",
+    ">    - 平均 µ\n",
+    ">    - 標準偏差 σ\n",
+    ">\n",
+    "> に従う場合、標本平均は µ。\n",
+    ">\n",
+    "> 標準偏差 σ / √n の正規分布に従う（n は標本集合の Size.）"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample集合の平均の標準偏差: 0.18257418583505536\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 中心極限定理を用いて標本集合の標準偏差を求める\n",
+    "import numpy as np\n",
+    "\n",
+    "org_std = 1.0  # 母集団の分散を設定\n",
+    "num_sample = 30  # Sample集合の大きさを設定\n",
+    "sample_std = org_std / np.sqrt(num_sample)  # Sample集合の平均の標準偏差を計算\n",
+    "print(f\"Sample集合の平均の標準偏差: {sample_std}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "前節で実行した標本集合の標準偏差である0.18 とほぼ同じ。中心極限定理によって標本平均のばらつきをうまく計算できることがわかる。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
