Doc: 数理最適化の出発点である「内定化」を理解する#7

--- a/section04/section04.ipynb
+++ b/section04/section04.ipynb
@@ -19,6 +19,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 4-2. 数理最適化の出発点である「内定化」を理解しよう\n",
+    "実際に配送Route の最適化問題を内定化していく。\n",
+    "- 目的: 配送Route の総移動距離を最小化する\n",
+    "- 条件: 全倉庫間の距離は既知、各倉庫への訪問回数は１度のみ\n",
+    "\n",
+    "[数式](https://boostnote.io/shared/26198401-ab49-428a-b506-25b29607245a)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
