doc: Algorithm による問題の解き方を理解する#7

--- a/section04/section04.ipynb
+++ b/section04/section04.ipynb
@@ -382,6 +382,105 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "最短巡回Route を導出することができた。\n",
+    "ただし、「全探索」では倉庫の数が増加していくと、それに伴って計算時間が膨大になる。\n",
+    "そこで、効率的に最短Route を導出する方法を検討していく。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4-4. Algorithm による問題の解き方を理解しよう"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "和: 5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# １から100までの和を求める\n",
+    "\n",
+    "# n を100とする\n",
+    "n = 100\n",
+    "s = sum(i for i in range(1, n+1))\n",
+    "print(f\"和: {s}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "一般的な PC に搭載されている CPU で、Python の処理速度は１秒間に 10^7回程度。\n",
+    "上記より、倉庫の数が仮に15になると、全探索では最適解を求めるのに少なくtも３時間以上の計算時間が必要になってします。\n",
+    "そこで、効率よく計算する Algorithm を考える必要がある。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "和: 5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 から 100 までの和を１回の掛け算で求める\n",
+    "n = 100\n",
+    "s = (1 + n) * n // 2\n",
+    "print(f\"和: {s}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "和: 50005000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 から 10000 までの和を１回の掛け算で求める\n",
+    "n = 10_000\n",
+    "s = (1 + n) * n // 2\n",
+    "print(f\"和: {s}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
