Doc: 動的計画法によって厳密解を求める方法を学ぶ#7

--- a/section04/section04.ipynb
+++ b/section04/section04.ipynb
@@ -481,6 +481,27 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4-5. 動的計画法によって厳密解を求める方法を学ぼう\n",
+    "最短の巡回Route の計算を「動的計画法（DP: Dynamic Programing）」という Algorithm によって効率化してみる。\n",
+    "\n",
+    "[漸化式を用いた最短距離](https://boostnote.io/shared/7283107b-0ae1-422d-9275-36133cb50b40)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
