Doc: 近似解も求めるという approach を学ぶ#7

--- a/section04/section04.ipynb
+++ b/section04/section04.ipynb
@@ -868,6 +868,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 4-7. 近似解を求めるという Approach を学ぼう\n",
+    "厳密な意味では最適解とはいえない可能性があるが、ある程度は最適に近い解である「近似解」を経験的に求める **「Heuristic」** を活用してみる。\n",
+    "最短Route を求める問題に対して特に有効であることがわかっている「最近傍法」で最短Route の近似解を求めていく。\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
