Feat: 非線形最適化問題を解いてみる#9

--- a/section05/section05.ipynb
+++ b/section05/section05.ipynb
@@ -152,6 +152,141 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 5-3. 非線形最適化問題を解いてみよう\n",
+    "正方形の形をした土地の最適な長さを求める問題を考える。\n",
+    "- 目的: x の二乗と 1000 との差を最小化する\n",
+    "- 条件: x は正の数"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "# 二分探索によって f(x) が 0 となる x の値を求める\n",
+    "\n",
+    "def f(x):\n",
+    "    return x ** 2 - 1000"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "# 初期設定\n",
+    "lo = -0.1\n",
+    "hi = 1000.1\n",
+    "eps = 1e-10  # 許容誤差"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "結果: 31.622776601731587\n",
+      "探索回数: 44回\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 二分探索を実行\n",
+    "count = 0\n",
+    "while hi - lo > eps:\n",
+    "    x = (lo + hi) / 2\n",
+    "    if f(x) >= 0:\n",
+    "        hi = x\n",
+    "    else:\n",
+    "        lo = x\n",
+    "    count += 1\n",
+    "\n",
+    "print(f\"結果: {hi}\")\n",
+    "print(f\"探索回数: {count}回\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "二分探索：両端から範囲を２つに分けながら、少しずつ絞り込みを行なっていく方法"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "結果: 31.622776601684333\n",
+      "探索回数: 9回\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Newton法によって f(x) が 0 となる x の値を求める\n",
+    "\n",
+    "# Newton法の関数\n",
+    "# x0, eps は Default値\n",
+    "def square_root(y, x0=1, eps=1e-10):\n",
+    "    x = x0\n",
+    "    count = 0\n",
+    "    while abs(x ** 2 - y) > eps:\n",
+    "        x -= (x * x - y) / (2 * x)\n",
+    "        count += 1\n",
+    "    return x, count\n",
+    "\n",
+    "\n",
+    "# Newton法の実行\n",
+    "x, count = square_root(1000)\n",
+    "print(f\"結果: {x}\")\n",
+    "print(f\"探索回数: {count}回\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Newton法:\n",
+    "関数と x軸との交点を求める手法。関数の値が 0 になる x の値を求める方法として用いられる。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Newton法の法が二分探索に比べて高速に計算ができた。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
