Feat: Shift希望を Graph-network で可視化する方法を学ぶ#9

--- a/section05/section05.ipynb
+++ b/section05/section05.ipynb
@@ -330,6 +330,120 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5-5. Shift希望を Graph-Network で可視化する方法を学ぼう"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ~ 100までの整数を100個乱数生成\n",
+      "[ 6 88 46 38 91 12 13 59 71 76 49 10 70 15 52  4 14 60 30 88 51  9 21 60\n",
+      " 75 18 64 23 85 24 52 82 81 99 18 45 13 73 24 38 51 63 61 94 62 68 29 57\n",
+      " 87  9  2 84 19 84 30 66 61  7 83 40 12 19 84  1  2  8 83  9  8  5 53 13\n",
+      " 87 97 73 23 91 97  4 79 94  5 64 51 92 96 52 69 98 81 42 82 66 31 75  6\n",
+      " 54 39 42  6]\n",
+      "50が含まれているか: False\n",
+      "50が含まれているか: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list と set の処理構造を比較する\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "print(f\"1 ~ 100までの整数を100個乱数生成\")\n",
+    "a = np.random.randint(1, 100, 100)\n",
+    "print(a)\n",
+    "l = list(a)\n",
+    "s = set(a)\n",
+    "\n",
+    "x = 50\n",
+    "\n",
+    "# 下の２行はどちらも同じ結果になる\n",
+    "print(f\"50が含まれているか: {x in l}\")\n",
+    "print(f\"50が含まれているか: {x in s}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1.77 s\n",
+      "Wall time: 4.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# list での実行時間\n",
+    "for _ in range(10 ** 6):\n",
+    "    x in l  # list の場合"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 123 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# set での実行時間\n",
+    "for _ in range(10**6):\n",
+    "    x in s  # set の場合"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "list と set では、Data構造が異なるため、同じ処理でも計算時間に大きな差が生じる。\n",
+    "大枠の Algorithm が同じだとしても、使用する Data構造によって処理時間が大きく変わる。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
